Search for relevant records in CORE after bookmarklet submission.

--- a/oabutton/static/test/test.html
+++ b/oabutton/static/test/test.html
@@ -10,6 +10,7 @@
       <div id="qunit-fixture"></div>
       <script src="resources/qunit.js"></script>
       <script src="../public/js/jquery.min.js"></script>
+      <script src="resources/jquery.mockjax.js"></script>
       <script src="../public/js/success.js"></script>
       <script src="test.js"></script>
   </body>
